overflow hidden to avoid horz scroll

--- a/default.css
+++ b/default.css
@@ -70,6 +70,8 @@ section {
   max-width: 700px;
   margin: 1rem auto 0 auto;
   padding: 0 1rem;
+  overflow: hidden;
+  overflow-x: hidden;
 }
 
 p {
